--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:latest
+    image: postgres:16
     restart: always
     environment:
       POSTGRES_PASSWORD: admin
@@ -12,4 +12,4 @@ services:
       - db_data:/var/lib/postgresql/data
 
 volumes:
-  db_data: 
+  db_data:
