--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch index.js"
-    
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
